[package]
name = "fclock"
version = "0.0.1"
edition = "2021"
description = "Fibonacci clock for the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
libmath = "0.2.1"
structopt = "0.3.26"
termion = "1.5.6"
tui = { version = "0.17", default-features = false, features = ['termion'] }
